--- a/package.json
+++ b/package.json
@@ -3,9 +3,15 @@
   "version": "1.0.0",
   "type": "module",
   "description": "An easy-to-use library for the webMAN MOD PS3 API written in Node.js.",
-  "main": "src/index.js",
+  "main": "src/wrapper.cjs",
+  "exports": {
+    ".": {
+      "import": "./src/index.js",
+      "require": "./src/wrapper.cjs"
+    }
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx mocha src/*"
   },
   "repository": {
     "type": "git",
@@ -23,5 +29,8 @@
   "bugs": {
     "url": "https://github.com/Minionguyjpro/wMMLib/issues"
   },
-  "homepage": "https://github.com/Minionguyjpro/wMMLib#readme"
+  "homepage": "https://github.com/Minionguyjpro/wMMLib#readme",
+  "dependencies": {
+    "mocha": "^11.6.0"
+  }
 }
